# diffscreen

./: Cargo.toml  README.md  build.bat  build.ps1  cert.pem  key.pem
.github/: dependabot.yml
.github/workflows/: rust.yml
dsclient/: Cargo.toml
dsclient/src/: bitmap.rs  client.rs  main.rs  util.rs
dscom/: Cargo.toml
dscom/src/: convert.rs  lib.rs
dsserver/: Cargo.toml  build.rs
dsserver/src/: config.rs  convert.rs  key_mouse.rs  main.rs  screen.rs  server.rs  util.rs
dsserver/src/screenshot/: mod.rs  win32.rs
libs/env-libvpx-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs  ffi.h  regen-ffi.bat  regen-ffi.sh
libs/env-libvpx-sys/.github/workflows/: rust.yml
libs/env-libvpx-sys/src/: lib.rs
libs/env-libvpx-sys/vpx-sys-test/: Cargo.toml
libs/env-libvpx-sys/vpx-sys-test/src/: main.rs
libs/vpx-codec/: Cargo.toml
libs/vpx-codec/src/: decoder.rs  encoder.rs
