[package]
name = "dsclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
dscom = {path = "../dscom"}
fltk-sys="1.2.20"
fltk = { version = "1.2.20",features = ["fltk-bundled"] }
