[package]
name = "dsclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
dscom = {path = "../dscom"}

zstd = "0.9"
fltk = { version = "^1.3", git = "https://github.com/fltk-rs/fltk-rs" }
rayon = "1.5"
