[package]
name = "dsclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
dscom = {path = "../dscom"}

zstd = "0.11"
fltk = { version = "^1.3", git = "https://github.com/fltk-rs/fltk-rs" }
rayon = "1.5"


tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread", "fs", "io-util"] }
quinn = "0.9.3"
rustls = { version = "0.20.6", features = ["quic"] }
rustls-pemfile = "1.0.2"
