[package]
name = "dsserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dscom = {path = "../dscom"}

zstd = "0.11"
scrap = "0.5"
enigo = "0.0.14"
rayon = "1.5"


tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread", "fs", "io-util"] }
quinn = "0.9.3"
rustls = { version = "0.20.6", features = ["quic"] }
rustls-pemfile = "1.0.2"
