[package]
name = "env-libvpx-sys"
authors = ["Richard Diamond <wichard@vitalitystudios.com>", "Kornel Lesiński <kornel@geekhood.net>", "Andrew Straw <strawman@astraw.com>"]
description = "Rust bindings to libvpx"
license = "MPL-2.0"
links = "vpx"
repository = "https://github.com/astraw/env-libvpx-sys"
version = "5.1.3"
edition = "2018"
keywords = ["vp8", "vp9", "webm", "bindings", "video"]
categories = ["external-ffi-bindings", "multimedia::images", "multimedia::encoding", "multimedia::video"]

[build-dependencies]
pkg-config = "0.3.5"

[build-dependencies.bindgen]
optional = true
version = "0.69.0"

[features]
default = []
generate = ["bindgen"]

[lib]
name = "vpx_sys"
